Fix Dockerfile and appsettings.json

--- a/HybridEncryptionLogin/Dockerfile
+++ b/HybridEncryptionLogin/Dockerfile
@@ -13,10 +13,14 @@ COPY ["HybridEncryptionLogin/HybridEncryptionLogin.csproj", "HybridEncryptionLog
 COPY ["HybridEncryptionLogin.Services/HybridEncryptionLogin.Services.csproj", "HybridEncryptionLogin.Services/"]
 RUN dotnet restore "HybridEncryptionLogin/HybridEncryptionLogin.csproj"
 COPY . .
+
 WORKDIR "/src/HybridEncryptionLogin"
 RUN dotnet build "HybridEncryptionLogin.csproj" -c Release -o /app
 
 FROM build AS publish
+WORKDIR "/src/HybridEncryptionLogin/ClientApp"
+RUN rm -rf node_modules package-lock.json && npm install
+WORKDIR "/src/HybridEncryptionLogin"
 RUN dotnet publish "HybridEncryptionLogin.csproj" -c Release -o /app
 
 FROM base AS final
