--- a/HybridEncryptionLogin/appsettings.json
+++ b/HybridEncryptionLogin/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AES": {
+    "IV": "7061737323313233"
+  }
 }
